feature: added topology retrieval endpoint
